<resources>
    <string name="app_name">Hondana</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="title_MyActivity">ホンダナ</string>
    <string name="search">本を探す</string>
    <string-array name="array01">
        <item>はじめてガイド</item>
        <item>本を交換する</item>
        <item>本を登録する</item>
        <item>ブクについて</item>
        <item>発送について</item>
    </string-array>
    <string-array name="array02">
        <item>プロフィール</item>
        <item>メールアドレス</item>
        <item>住所</item>
    </string-array>
    <string name="textViewAboutRegister">ホンダナでは皆さんが安心して取引ができるように\n本人確認のためSMS(ショートメッセージサービス)を\n利用して認証を行います。\n電話番号は第三者に公開されることはありません。</string>
    <string name="CheckBoxAgreeRegister">利用規約に同意する</string>
    <string name="sync_sign_up_button">電話番号認証を行う</string>
    <string name="buttonCancel">"キャンセル"</string>
    <string name="passedText01">"交換リクエストが届きました"</string>
    <string name="passedText02">"1.届いた宛名ラベルをダウンロードしましょう。"</string>
    <string name="buttonDownload">"ダウンロードする"</string>
    <string name="passedText03">"2.宛名ラベルをプリントして梱包した本に貼り付け、\n本を発送してください。"</string>
    <string name="passedText04">"本の梱包のやりかた>"</string>
    <string name="passedText05">"3.同梱を希望している人に発送する場合は\n選択してください。"</string>
    <string name="radioButtonBundle">"同梱しました！"</string>
    <string name="radioButtonNotBundle">"ごめんなさい、同梱できませんでした‥"</string>
    <string name="buttonSending">"発送完了"</string>
    <string name="textViewBookInfoLargeTitle">タイトル</string>
    <string name="textViewBookInfoLargeAuthor">著者名</string>
    <string name="textViewBookDetailLike">いいね</string>
    <string name="textViewBookInfo">本の情報</string>
    <string name="textViewBookInfoTitle">タイトル</string>
    <string name="textViewBookInfoAuthor">著者名</string>
    <string name="textViewBookInfoPublisher">出版社</string>
    <string name="textViewBookInfoDateOfIssue">発売日</string>
    <string name="textViewBookInfoIsbn">ISBNコード</string>
    <string name="buttonPreRequest">本の交換をリクエストする</string>
    <string name="textBookOwnerListName">ユーザー名</string>
    <string name="textBookOwnerListCondition">評価</string>
    <string name="buttonBookOwnerList">交換する</string>
    <string name="textViewGuideBukuTitle">ブクについて</string>
    <string name="textViewGuideBuku1_1">ブクって何？</string>
    <string name="textViewGuideBuku1_2">「ブク」とは、ホンダナで本を交換する時に\n必要なポイントです。\nホンダナにお手持ちの本を登録すると、\n10冊ごとに1ブクがもらえます。\n\nホンダナにはユーザーが登録した\nたくさんの本が集まっているので\nほしい本を見つけたら\n1冊につき1ブクで交換リクエストを\n送ることができます。\n\nなお、最初の1冊目を登録すると、\nホンダナから皆様に1ブクを\nプレゼントしています！\n\nまずは1冊から本を登録してみましょう。</string>
    <string name="textViewGuideBuku2_1">ブクの有効期限</string>
    <string name="textViewGuideBuku2_2">ブクには有効期限はありません。</string>
    <string name="textViewUserPolicyTitle1_1">利用規約</string>
    <string name="textViewUserPolicyTitle1_2">この利用規約（以下「本規約」といいます）は、スピカ旅行社（以下「当社」といいます）が提供する本の交換アプリ「ホンダナ」（以下「本アプリ」といいます）の利用に関わる事項を定めるものです。</string>
    <string name="textViewUserPolicy1">第1条\n本規約の適用\n1.本規約は、本アプリの利用に関する条件をユーザー（第2条で定義します）と当社との間で定めることを目的とし、ユーザーと当社の間の本アプリに関する一切の関係に適用されます。\n2.ユーザーは本規約に同意をしたうえで、本規約の定めに従って本アプリを利用しなればなりません。ユーザーは、本アプリを利用することにより本規約に同意したものとみなされます。\n3.ユーザーが、未成年者である場合は、親権者など法定代理人の同意を得たうえで本アプリを利用してください。同意がない場合は本アプリをご利用いただけません。\n4.当社が、本アプリ内において、別途定めるルール、ガイドライン、通知等は、本規約の一部を構成するものとします。\n5.当社は、ユーザーの事前承諾なく本規約を変更することができるものとします。当該規約の変更は、本アプリ上に表示した時点より効力を生じます。規約の変更後に、ユーザーが本アプリを継続して利用した場合、変更に同意したものとみなされます。</string>
    <string name="textViewUserPolicy2">第2条\n定義\n1.「ユーザー」とは、本規約の内容に同意し本アプリを利用する個人をいいます。\n2.「コンテンツ」とは、ユーザー又は当社が本アプリ上に掲載した情報をいいます。\n3.「出品」とは、ユーザーが自身の所有する物を他のユーザーに提供することを目的としてその物（以下「出品物」といいます）に関するコンテンツを本アプリ上に掲載し、他のユーザーが閲覧・譲り受け申込みできる状態にすることをいいます。\n4.「出品ユーザー」とは、本アプリを通じて出品を行うユーザーをいいます。\n5.「譲り受けユーザー」とは、出品物を譲り受けるユーザーをいいます。\n6.「交換券」とは、当社が本アプリ上で一定の条件のもとユーザーに付与するもので、本アプリ上でのユーザー間の物々交換に利用できるものです。交換券は本アプリ内でのみ利用できます。交換券の内容・種類、提供方法及び提供期間等は当社が定めます。なお、交換券を換金することはできません。\n7.「カテゴリ」とは、交換券が利用可能な一定の範囲のことをいいます。カテゴリは交換券ごとにあらかじめ定められています。カテゴリの内容・種類等は当社が定めます。\n8.「ミッション」とは、ユーザーが所定の行動をし所定の基準に到達することで当社から交換券の付与を受けられる機会をいいます。ミッションの内容・種類及び期間等は当社が定めます。</string>
    <string name="textViewUserPolicy3">第3条\n本アプリの内容について\n1.本アプリは、個人間の自由な物々交換（シェアリングエコノミー）の「場」を提供するアプリです。当社は、交換券の付与等に関する事項を除き、ユーザー間の取引には関与しません。取引は各自の自己責任のもとで行ってください。</string>
    <string name="textViewUserPolicy4">第4条\nユーザー登録\n1.本アプリを利用するにはユーザー登録が必要です。\n2.ユーザー登録をする方は、本アプリ上からインターネット回線を通じて自己の情報を当社に送信するものとします。ユーザー登録は必ず本人が行ってください。一人で複数のユーザー登録をすることはできません。\n3.ユーザー登録は、当社が前項の情報を受信した時に完了するものとします。\n4.ユーザー登録の際は、真正かつ正確な情報を登録・送信してください。\n5.当社がユーザー登録の情報が真正でない又は正確ではないと判断したときには、ユーザー登録を削除等することがあります。\n6.ユーザー登録の内容に変更が生じたときには、すみやかに登録内容を修正してください。\n7.本アプリの利用をやめるときには本アプリを削除してください。なお、他のユーザーとの間で継続中の取引があるときには、本アプリの削除は当該取引が終了してから行ってください。本アプリの削除により問題が生じた場合も、当社は、一切責任を負いません。\n8.ユーザー登録により付与されるユーザーアカウントは、当該ユーザー本人のみが利用できます。ユーザーアカウントを第三者等に利用させることや第三者に譲渡等することはできません。\n9.当社は、ユーザーが次の各号のいずれかに該当するときには、当該ユーザーのユーザー登録を削除する等の措置をとることがあります。\n(1)法令又は本規約に違反する行為をしたとき\n(2)過去に当社から利用停止等の措置を受けていることが判明したとき\n(3)ユーザー登録の内容が真正でない又は正確でないとき\n(4)他のユーザーの本アプリ利用を妨害したり、利用に支障をきたす行為をしたとき\n(5)当社の業務運営を妨害したり、業務運営に支障をきたす行為をしたとき\n(6)暴力団等の反社会的勢力と何らかの関係を有していることが判明したとき\n(7)その他当社が本アプリのユーザーとして不適切であると判断するとき</string>
    <string name="textViewUserPolicy5">第5条\nID登録\n1.ユーザーは、当社が指定する必要な情報をインターネットを通じて当社に送信することで、ID登録をすることができます。ID登録をすることで、ユーザーは、異なる端末で本アプリについて同一のユーザーとして利用することができるようになります。\n2.ID登録により付与されるIDは、当該ユーザー本人のみが利用できます。IDを第三者等に利用させることや第三者に譲渡等することはできません。</string>
    <string name="textViewUserPolicy6">第6条\n出品\n1.ユーザーは、本アプリ上で出品を行うことができます。\n2.ユーザーは、次の各号に該当する物の出品はできません。\n(1)所有や譲渡に法令に基づく許可等が必要な物\n(2)他のユーザーや第三者の正当な権利を侵害するおそれのある物\n(3)低俗・わいせつな内容を含む物\n(4)所有することや譲渡することが公序良俗に反し、又は、法令に違反する物\n(5)犯罪行為に関する物\n(6)その他当社が出品に不適切と判断する物\n3.出品物に関して当社が本規約に違反すると判断したとき又は不適切と判断したときには、当社は当該コンテンツを削除することがあります。これによりユーザーに生じる損害について当社は一切責任を負いません。</string>
    <string name="textViewUserPolicy7">第7条\n出品物の譲受け\n1.ユーザーは、本アプリ上で出品物譲り受けの申込みを行うことができます。\n2.譲り受けユーザーは、交換券を使用して出品ユーザーから出品物を譲り受けることができます。取引が成立し互いのユーザー評価（第6条に定めるユーザー評価）が完了すると、交換券は自動的に出品ユーザーへ移譲されます。\n3.交換券移譲は、譲り受けユーザーが出品ユーザーの評価を行ったのちに出品ユーザーが譲り受けユーザーの評価を行った時点で行われます。但し、ユーザーによる評価がすみやかに行われないときには一定期間経過後に自動的に交換券の移譲が行われます。\n4.ユーザーから当社に対し出品物の取引に関し問題が発生した旨の連絡があったときには、当社は当該取引にかかわる交換券の利用を凍結する等の措置を取ることがあります（出品物を譲り受けたのに物が届かない、出品物を発送したのに交換券が移譲されない等）。</string>
    <string name="textViewUserPolicy8">第8条\nユーザー評価\n1.譲り受けユーザーは、出品物が届いたらその内容を7日間以内に確認し本アプリ上で出品ユーザーに関する評価を行ってください。\n2.前項の評価が終了すると、出品ユーザーに対して、譲り受けユーザーに関する評価を行うよう促す通知が届きます。通知が届いたら、出品ユーザーはすみやかに譲り受けユーザーに関する評価を行ってください。\n3.当社はユーザー評価が著しく悪いユーザーについて取引参加を一定期間凍結する等の措置をとることがあります。</string>
    <string name="textViewUserPolicy9">第9条\n禁止事項\n1.当社は、ユーザーが次の各号に該当する行為を行うことを禁止します。\n(1) 法令又は本規約に違反する行為\n(2) 転売目的での取引行為\n(3) 本アプリのシステムに不正に負荷を与える行為\n(4) 本アプリのシステム、ソースコード、画像等を転用する行為\n(5) 当社及び他のユーザーの権利を侵害する行為\n(6) 本アプリにかかわるサービスの運用を妨げる行為\n(7) 犯罪行為に関連する行為又は公序良俗に反する行為\n(8) 当社、他のユーザー又は第三者の著作権等の知的財産権、肖像権、名誉、その他の権利を侵害すること、ならびにそのおそれのある行為\n(9) 青少年の心身に悪影響を与える行為\n(10) 低俗、わいせつな物やデータを送信する行為\n(11) 営業、宣伝、広告、勧誘（宗教団体への勧誘も含む）等の行為\n(12) コンピュータウィルスの送信等、機器や通信回線、本サービスのソフトウェア等の機能に悪影響を及ぼす行為\n(13) 個人情報など本サービスで知り得た情報について、アイテムの発送や連絡など本サービスに関する以外の目的で使用すること、又は第三者に譲渡・提供する行為\n(14) カテゴリ対象外の出品物を出品する行為\n(15) その他当社が不適切と判断する行為\n2.当社は、本アプリにおけるユーザーの行為が前項各号のいずれかに該当し、又は該当するおそれがあると判断した場合には、ユーザーに事前に通知することなく、コンテンツの全部又は一部の削除もしくは本アプリの利用停止、その他当社が必要と判断する措置を講じることができるものとします。\n3.当社は、本条に基づき当社が行った措置により、ユーザーに生じた損害について一切の責任を負いません。</string>
    <string name="textViewUserPolicy10">第10条\nコンテンツ\n1.当社はユーザーの掲載したコンテンツの信頼性・正確性について責任を負いません。\n2.当社はユーザーの掲載したコンテンツの保存の義務を負いません。</string>
    <string name="textViewUserPolicy11">第11条\n本アプリの停止\n1.本アプリの停止 当社は、以下の各号のいずれかに該当するときには、一時的に本アプリの稼働を停止することがあります。\n(1) システムの保守、点検、修理、変更等を行うとき\n(2) 火災、停電等により本アプリによるサービスの提供ができなくなったとき\n(3) 法令又はこれに基づく措置により本アプリによるサービスの提供ができなくなったとき\n(4) 本アプリによるサービスは永続的に提供されるものではありません。当社は、経営上の事由等により本アプリによるサービス提供を終了することがあります。当社は、本アプリのサービス終了により発生する損害について責任を負いません。\n2.本アプリの終了 当社は、任意の理由により、ユーザーへの事前通知をすることなく、いつでも本アプリの全部又は一部を終了及び変更できるものとします。\n3.当社は、本条に基づき行った措置に基づき、ユーザーに生じた損害について一切責任を負いません。</string>
    <string name="textViewUserPolicy12">第12条\n知的財産権\n1.本アプリ上で当社が提供するコンテンツの知的財産権は当社に帰属します。\n2.本アプリ上にユーザーが掲載したコンテンツの著作権はユーザーに帰属します（但しユーザーが第三者の著作権を侵害している場合を除きます）。\n3.当社は、ユーザーの掲載したコンテンツを本アプリの告知（ＴＶ、雑誌、インターネット等）のために利用できるものとします。但し、個人が特定できないように適切な個人情報保護措置を取るものとします。\n4.当社は、前項以外の目的でユーザーのコンテンツを利用する際には事前に当該ユーザーの同意を得るものとします。</string>
    <string name="textViewUserPolicy13">第13条\n個人情報管理\n1.当社は全従業者が遵守すべき行動基準として「個人情報保護方針」を定め、その遵守の徹底を図っています。当社は個人情報の取り扱いを個人情報保護法、及び当社の定める個人情報保護方針に基づいて適切に対応します。\n2.個人情報/利用情報について 本アプリで取り扱う個人情報/利用情報とは以下のものとします。\n(1) 氏名、ご住所、電話番号、アカウント情報（メールアドレス及びパスワード等）\n(2) お客様が利用した内容、利用日時、利用回数や履歴に関する情報\n(3) お客様が投稿されたコメントや評価\n(4) お客様の決済状況に関する情報\n3.個人情報/利用情報の収集について 本アプリで取り扱う個人情報/利用情報は以下の方法で収集させていただきます。\n(1) 取得情報をお客様自身に入力していただく方法\n(2) お客様が本アプリをご利用された際に履歴等を収集させていただく方法(収集対象にはブラウザや携帯電話の種類やIPアドレス、Cookie情報、ログ情報、位置情報などの情報を含みます)\n4.個人情報/利用情報の利用目的について 本アプリで取り扱う個人情報/利用情報は以下の目的で利用させていただきます\n(1) 出品者や取得者の皆様に電子メール等で取引の状態や重要な事項を連絡を行うため\n(2) ユーザー登録する際に必要な情報入力を簡略化するため\n(3) 出品物、サービスの交換/購入の確認やお届けをするため\n(4) 本アプリの内容をよりご満足いただけるように改良するため\n(5) 新サービス開発のため\n(6) 交換時の情報や出品物などに関する満足度を調査するため\n(7) 取得情報を統計的に処理した情報を、集約し調査結果として公表するため\n(8) 調査のご協力依頼や各種イベントへのご参加依頼のため\n(9) 運営上のトラブルの解決のため\n5.個人情報/利用情報の第三者への開示について 本アプリでは以下に定める場合、個人情報/利用情報を第三者に開示します。\n(1) 本アプリを提供するために弊社が必要と判断した情報の開示の場合、出品者、取得者の登録氏名、住所、電話番号等は、本アプリ上で取引した出品者、取得者のそれぞれに開示されます。 開示された情報の利用は当該取引のみとし、それぞれのお客様の同意なく第三者に開示してはなりません\n(2) 当社がサービスの運営及び提供において必要と判断した場合\n(3) 利用履歴や一部の公開用の情報は、当社サービス上で当社が定める期間、公開されることがあります\n(4) その他、当社が情報の開示が必要と判断した場合に、お客様の同意を得た上で、情報を開示させていただくことがあります</string>
    <string name="textViewUserPolicy14">第14条\nアプリ内データの利用\n1.当社は、統計を取る目的等でユーザーのアプリ内データを利用することがあります。当社がアプリ内データを利用する際にユーザーが特定されることはありません。</string>
    <string name="textViewUserPolicy15">第15条\n損害賠償\n1.当社は、本アプリの利用によりユーザーに生じた損害についてその賠償義務を負いません。\n2.ユーザーは、本規約に違反することにより、又は本アプリの利用に関連して当社に損害を与えた場合、当社に対しその損害を賠償するものとします。</string>
    <string name="textViewUserPolicy16">第16条\n免責\n1.ユーザーに出品物に起因する何らかの損害が発生した場合、当社はこれについて一切責任を負いません。\n2.コンテンツに関する一切の責任は、掲載した当該ユーザーが負うものとします。当社は、コンテンツ及び出品物の内容、品質、正確性、信憑性、適法性、最新性、有用性等について、確認いたしません。また、当社は、それらに関して、一切保証せず、一切責任を負わないものとします。\n3.本アプリに関してユーザー間、又はユーザーとその他の第三者との間において生じた取引、連絡、紛争等については、ユーザーの責任において処理及び解決するものとし、当社はかかる事項について一切責任を負わないものとします。</string>
    <string name="textViewUserPolicy17">第17条\n反社会的勢力の排除\n1.ユーザー及び当社は、相互に、ユーザー又は当社が次の各号に該当しないことを表明、保証するものとします。\n(1) 暴力団\n(2) 暴力団員\n(3) 暴力団準構成員\n(4) 暴力団関連企業\n(5) 総会屋、社会運動等標榜ゴロ又は特殊知能暴力集団\n(6) その他前各号に準じる者\n2.ユーザー又は当社は、相手方が次の各号のいずれかに該当するときには、何らの催告を要せず、直ちに本アプリの利用契約の全部又は一部を解除することができるものとします。\n(1) 前項の表明、保証に関して虚偽の申告をしたことが判明したとき\n(2) ユーザー又は当社の関係者が前項各号のいずれかに該当したとき\n(3) ユーザー又は当社の関係者が、自ら又は第三者を利用して、以下に該当する行為をしたとき\n1. 暴力的な要求行為\n2. 法的な責任を超えた不当な要求行為\n3. 取引に関して、脅迫的な言動をし、又は暴力を用いる行為\n4. 風説を流布し、偽計又は威力を用いて相手方の信用を毀損し、又は相手方の業務を妨害する行為\n5. その他前①乃至④に類する行為\n3.前項の規定に相手方が該当し、利用契約等を解除した場合、相手方に損害が生じても、解除者は何らの賠償ないし保証を要しないものとします。\n4.前２項の解除により、解除者に損害が生じたときは、その相手方は解除者の損害を賠償するものとします。</string>
    <string name="textViewUserPolicy18">第18条\n一般条項\n1.通知\n(1) 本アプリに関する当社からユーザーへの通知・連絡は、当社が運営するウェブサイト又は本アプリ内の適宜の場所への掲示その他、当社が適当と判断する方法により行なうものとします\n(2) ユーザーが弊社に通知、連絡又は問い合わせをする必要が生じた場合、本アプリの問い合わせ機能を利用するものとします\n2.利用規約の変更 当社は、必要に応じ適宜本規約を変更することがあります。本規約変更後、ユーザーは変更後の本規約に同意をしたうえで、本規約の定めに従って本アプリを利用しなればなりません。\n3.譲渡禁止 ユーザーは、当社の書面による事前の承諾なく、本規約に基づく契約上の地位又は本規約に基づく権利もしくは義務につき、第三者に対し、譲渡、移転、担保設定、貸与、その他の処分をすることはできません。\n4.事業譲渡 当社が本アプリに係る事業を第三者に譲渡する場合（合併、事業譲渡、会社分割その他本アプリが移転する一切の場合を含む。）には、当該事業の譲渡に伴い、ユーザーの本規約に基づく契約上の地位、本規約に基づく権利・義務及びユーザー登録に伴い登録された情報その他の情報を、当社は当該事業の譲受人に譲渡することができるものとし、ユーザーは、かかる譲渡につき予め承諾するものとします。\n5.分離可能性 本規約のいずれかの条項又はその一部が、消費者契約法その他の法令等により無効と判断された場合であっても、本規約の残りの規定及び一部が無効と判断された規定の残りの部分は、継続して有効に存続し、当該無効とされた条項又はその一部を、有効とするために必要な範囲で修正し、最大限、当該無効とされた条項又はその一部の趣旨及び法律的経済的に同等の効果が確保されるよう解釈されるものとします。\n6.定めのない事項等 本規約に定めのない事項又は本規約の解釈に疑義が生じた場合には、ユーザーは、当社の定めるところに従うものとします。これにより解決しない場合には、当社及びユーザーは、信義誠実の原則に従って協議の上速やかに解決を図るものとします。\n7.準拠法及び裁判管轄 本規約は日本法に基づき、解釈されるものとします。当社とユーザー間で紛争が生じた場合は、その内容に応じて、東京地方裁判所又は東京簡易裁判所を第1審の専属的合意管轄裁判所とします。</string>
    <string name="textViewUserPolicy19">第19条\nテスト</string>
    <string name="textViewUserPolicy20">第20条\nテスト</string>
</resources>