<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:elevation="4dp"
            android:theme="@style/AppTheme.AppBarOverlay"
            android:minHeight="?attr/actionBarSize"
            android:background="?attr/colorPrimary"></android.support.v7.widget.Toolbar>
        <!--利用規約-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textViewUserPolicyTitle1_1"
            android:layout_marginTop="20dp"
            android:id="@+id/textViewUserPolicyTitle1_1"
            android:layout_gravity="center_horizontal"
            android:textSize="24sp"/>

        <!--区切り線-->
        <View
            android:layout_width="wrap_content"
            android:layout_height="20dip"
            android:background="#E6E5E1"
            android:layout_marginLeft="6dip"
            android:layout_marginRight="6dip"
            android:layout_marginTop="12dip"
            android:layout_marginBottom="12dip" />

        <!--利用規約について-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewUserPolicyTitle1_2"
            android:text="@string/textViewUserPolicyTitle1_2"
            android:textSize="14sp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp" />

        <!--第1条-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textViewUserPolicy1"
            android:id="@+id/textViewUserPolicy1"
            android:textSize="14sp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp" />

        <!--第2条-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textViewUserPolicy2"
            android:id="@+id/textViewUserPolicy2"
            android:textSize="14sp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"/>

        <!--第3条-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textViewUserPolicy3"
            android:id="@+id/textViewUserPolicy3"
            android:textSize="14sp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"/>

        <!--第4条-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textViewUserPolicy4"
            android:id="@+id/textViewUserPolicy4"
            android:textSize="14sp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"/>

        <!--第5条-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textViewUserPolicy5"
            android:id="@+id/textViewUserPolicy5"
            android:textSize="14sp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"/>

        <!--第6条-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textViewUserPolicy6"
            android:id="@+id/textViewUserPolicy6"
            android:textSize="14sp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"/>

        <!--第7条-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textViewUserPolicy7"
            android:id="@+id/textViewUserPolicy7"
            android:textSize="14sp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"/>

        <!--第8条-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textViewUserPolicy8"
            android:id="@+id/textViewUserPolicy8"
            android:textSize="14sp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp" />

        <!--第9条-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textViewUserPolicy9"
            android:id="@+id/textViewUserPolicy9"
            android:textSize="14sp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp" />

        <!--第10条-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textViewUserPolicy10"
            android:id="@+id/textViewUserPolicy10"
            android:textSize="14sp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp" />

        <!--第11条-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textViewUserPolicy11"
            android:id="@+id/textViewUserPolicy11"
            android:textSize="14sp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp" />

        <!--第12条-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textViewUserPolicy12"
            android:id="@+id/textViewUserPolicy12"
            android:textSize="14sp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp" />

        <!--第13条-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textViewUserPolicy13"
            android:id="@+id/textViewUserPolicy13"
            android:textSize="14sp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp" />

        <!--第14条-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textViewUserPolicy14"
            android:id="@+id/textViewUserPolicy14"
            android:textSize="14sp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp" />

        <!--第15条-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textViewUserPolicy15"
            android:id="@+id/textViewUserPolicy15"
            android:textSize="14sp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp" />

        <!--第16条-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textViewUserPolicy16"
            android:id="@+id/textViewUserPolicy16"
            android:textSize="14sp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp" />

        <!--第17条-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textViewUserPolicy17"
            android:id="@+id/textViewUserPolicy17"
            android:textSize="14sp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp" />

        <!--第18条-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textViewUserPolicy18"
            android:id="@+id/textViewUserPolicy18"
            android:textSize="14sp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp" />

        <!--第19条-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textViewUserPolicy19"
            android:id="@+id/textViewUserPolicy19"
            android:textSize="14sp"
            android:layout_marginLeft="20dp" />

        <!--第20条-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textViewUserPolicy20"
            android:id="@+id/textViewUserPolicy20"
            android:textSize="14sp"
            android:layout_marginLeft="20dp" />
    </LinearLayout>
</ScrollView>
