<?xml version="1.0" encoding="utf-8"?>
<!--本の詳細ページ-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scroller"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true" >


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <!--本の画像-->
        <ImageView
            android:layout_width="350dp"
            android:layout_height="350dp"
            android:id="@+id/imageViewBookInfo"
            android:layout_gravity="center_horizontal" />

        <!--タイトル-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textViewBookInfoLargeTitle"
            android:id="@+id/textViewBookInfoLargeTitle"
            android:textSize="20dp" />

        <!--著者-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textViewBookInfoLargeAuthor"
            android:id="@+id/textViewBookInfoLargeAuthor"
            android:textSize="20dp" />

        <!--いいね-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="6dip"
            android:paddingRight="6dip"
            android:paddingBottom="6dip"
            android:id="@+id/textViewBookInfoLike"
            android:text="@string/textViewBookDetailLike" />


        <!--区切り線-->
        <View
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:background="#ff106510"
            android:layout_marginLeft="6dip"
            android:layout_marginRight="6dip"
            android:layout_marginTop="6dip"
            android:layout_marginBottom="12dip" />


        <!--本の情報-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/textViewBookInfo"
            android:id="@+id/textViewBookDetailInfo" />


        <!--タイトル-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textViewBookInfoTitle"
            android:id="@+id/textViewBookInfoTitle" />

        <!--著者名-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textViewBookInfoAuthor"
            android:id="@+id/textViewBookInfoAuthor" />

        <!--出版社-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textViewBookInfoPublisher"
            android:id="@+id/textViewBookInfoPublisher" />


        <!--発売日-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textViewBookInfoDateOfIssue"
            android:id="@+id/textViewBookInfoDataOfIssue" />


        <!--ISBNコード-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textViewBookInfoIsbn"
            android:id="@+id/textViewBookInfoIsbn" />


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/bottom_bar"
            android:gravity="center_vertical">


            <!--下部に固定された交換ボタン-->
            <Button
                android:layout_width="0dip"
                android:layout_weight="1.0"
                android:layout_height="wrap_content"
                android:id="@+id/buttonPreRequest"
                android:text="@string/buttonPreRequest"
                android:background="#00a497" />


        </LinearLayout>


    </LinearLayout>


</ScrollView>
