<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/usericon"
        android:scaleType="centerCrop"
        android:layout_margin="5dp"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/usericon" />

    <TextView
        android:layout_width="90dp"
        android:layout_height="40dp"
        android:text="@string/textBookOwnerListName"
        android:id="@+id/textBookOwnerListName"
        android:textColor="#52AE93" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textBookOwnerListCondition"
        android:id="@+id/textBookOwnerListCondition"
        android:layout_weight="0.5"
        android:textColor="#52AE93" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonBookOwnerList"
        android:id="@+id/button"
        android:background="#52AE93"
        android:layout_weight="0.5" />

</LinearLayout>
